--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -60,12 +60,12 @@ http {
                 local args = ngx.req.get_uri_args()
                 local ip = args["ip"]
                 if not ip then
-                    ngx.say([[ERR\nNO_IP_ARG\n]])
+                    ngx.say([[ERR\r\nNO_IP_ARG]])
                     return
                 end
                 local info = _q.get_ip_info(ip)
                 if info then
-                    info = [[OK\n]] .. info
+                    info = [[OK\r\n]] .. info
                 else
                     info = [[ERR\r\nNO_RESULT]]
                 end
